--- a/AndroidApp/MeliSearchDataSource/build.gradle
+++ b/AndroidApp/MeliSearchDataSource/build.gradle
@@ -6,3 +6,7 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
 }
+
+dependencies {
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+}
