Agregar clases de Retrofit y implementación de los DataSources Se agregan las clases necesarias para llamar a las APIs utilizando el framework de retrofit y se crean las implementaciones de los dataSources

--- a/AndroidApp/app/src/main/AndroidManifest.xml
+++ b/AndroidApp/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             android:name=".ProductDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.searchProduct.MainActivity"
+            android:name=".presentation.search_product.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".FullscreenActivity"
+            android:name=".InitialActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="true"
             android:theme="@style/Theme.MeliChallenge.Fullscreen">
