--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'com.android.application'
 }
 
+def meliAPIUrl = (System.getenv("MELI_API_URL") != null) ? "\"${System.getenv("MELI_API_URL")}\"" : "\"https://api.mercadolibre.com/\""
+def meliAPISite = (System.getenv("MELI_API_SITE") != null) ? "\"${System.getenv("MELI_API_SITE")}\"" : "\"MLU\""
+
+
 android {
     compileSdk 32
 
@@ -13,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "APP_LOG_TAG", "\"meli_challenge\""
+        buildConfigField "String", "MELI_API_URL", meliAPIUrl
+        buildConfigField "String", "MELI_API_SITE", meliAPISite
+
     }
 
     buildTypes {
@@ -32,15 +40,25 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.5.0'
-    implementation 'androidx.navigation:navigation-ui:2.5.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation project(path: ':MeliSearchDataSource')
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation project(path: ':MeliSearchCore')
+    def retrofit_version = "2.9.0"
+
+    implementation "androidx.appcompat:appcompat:1.4.2"
+    implementation "com.google.android.material:material:1.6.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.navigation:navigation-fragment:2.5.0"
+    implementation "androidx.navigation:navigation-ui:2.5.0"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+
+    // RxJava
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
