--- a/AndroidApp/settings.gradle
+++ b/AndroidApp/settings.gradle
@@ -14,4 +14,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "MeliChallenge"
 include ':app'
-include ':MeliSearchDataSource'
+include ':MeliSearchCore'
