--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -2,9 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
-def meliAPIUrl = (System.getenv("MELI_API_URL") != null) ? "\"${System.getenv("MELI_API_URL")}\"" : "\"https://api.mercadolibre.com/\""
-def meliAPISite = (System.getenv("MELI_API_SITE") != null) ? "\"${System.getenv("MELI_API_SITE")}\"" : "\"MLU\""
-
+def meliAPIUrl = (System.getenv("MELI_API_URL") != null) ? "\"${System.getenv("MELI_API_URL")}\"" : "\"\""
+def meliAPISite = (System.getenv("MELI_API_SITE") != null) ? "\"${System.getenv("MELI_API_SITE")}\"" : "\"\""
 
 android {
     compileSdk 32
@@ -20,7 +19,8 @@ android {
         buildConfigField "String", "APP_LOG_TAG", "\"meli_challenge\""
         buildConfigField "String", "MELI_API_URL", meliAPIUrl
         buildConfigField "String", "MELI_API_SITE", meliAPISite
-
+        buildConfigField "int", "APP_ROOM_DB_VERSION", "1"
+        buildConfigField "String", "APP_ROOM_DB_NAME", "\"meli_database.db\""
     }
 
     buildTypes {
@@ -42,6 +42,13 @@ dependencies {
 
     implementation project(path: ':MeliSearchCore')
     def retrofit_version = "2.9.0"
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // RxJava3 support for Room
+    implementation "androidx.room:room-rxjava3:$room_version"
 
     implementation "androidx.appcompat:appcompat:1.4.2"
     implementation "com.google.android.material:material:1.6.1"
