--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -68,9 +68,32 @@ dependencies {
     implementation project(path: ':MeliSearchCore')
     def retrofit_version = "2.9.0"
     def room_version = "2.4.2"
+    def lifecycle_version = "2.5.0"
+    def picasso_version = "2.8"
+
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Lifecycle components
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // ViewModel utilities for Compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+
+    // Annotation processor
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     // RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:$room_version"
